--- a/calculator/index.html
+++ b/calculator/index.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="calculator">
-        <div class="result"></div>
-            <div class="panel">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-                <div>5</div>
-                <div>6</div>
-                <div>7</div>
-                <div>8</div>
-                <div>9</div>
-                <div>+</div>
-                <div>0</div>
-                <div>-</div>
-                <div>/</div>
-                <div>.</div>
-                <div>*</div>
-                <div>C</div>
-                <div>=</div>
-            </div>
+    <div class="calculator">
+        <div class="calculator__result"></div>
+            <ul class="calculator__panel">
+                <li class ="calculator__item">1</li>
+                <li class ="calculator__item">2</li>
+                <li class ="calculator__item">3</li>
+                <li class ="calculator__item">4</li>
+                <li class ="calculator__item">5</li>
+                <li class ="calculator__item">6</li>
+                <li class ="calculator__item">7</li>
+                <li class ="calculator__item">8</li>
+                <li class ="calculator__item">9</li>
+                <li class ="calculator__item">+</li>
+                <li class ="calculator__item">0</li>
+                <li class ="calculator__item">-</li>
+                <li class ="calculator__item">/</li>
+                <li class ="calculator__item">.</li>
+                <li class ="calculator__item">*</li>
+                <li class ="calculator__item">C</li>
+                <li class ="calculator__item">=</li>
+            </ul>
     </div>    
 </body>
 </html>
